Add --enable-preview to enable unnamed syntax